# predict

./: CHANGES  CREDITS  HISTORY  NEWS  README.md  README.txt  Windows_Build_Instructions.txt  build  changes.txt  clean  configure  get_time_test.c  hamradio.txt  history.txt  installer.c  makefile  moon.c  news.txt  predict-2.2.4.lsm  predict-2.2.5.lsm  predict.c  predict.db  predict.qth  predict.tle  predict.txt  readme.txt  tle-form.txt  uninstall  xpredict
clients/WinPredictClient/: frmWinPredictClient.frm
clients/earthtrack/: README  (+5 more)
clients/gsat-1.1.0/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  Plugin_API  README  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  gsat.db  gsat.glade  gsat.prefs
clients/gsat-1.1.0/autom4te.cache/: output.0  requests  traces.0  traces.1
clients/gsat-1.1.0/intl/: Makefile
clients/gsat-1.1.0/plugins/: FT-736_plugin.txt  Makefile  radio_FT736.c  radio_FT817.c  radio_ICR10-2.c  radio_ICR10-old.c  radio_ICR10.c  radio_PCR100.c  radio_TMD700.c  radio_print.c  radio_test.c  rotor_pictrack.c  rotor_print.c
clients/gsat-1.1.0/po/: ChangeLog  Makefile  Makefile.in  POTFILES  gsat.pot
clients/gsat-1.1.0/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  comms.c  comms.h  db.c  db.h  globals.h  graphics.h  interface.c  interface.h  main.c  plugins.c  plugins.h  prefs.c  prefs.h
clients/gsat-1.1.0/src/.deps/: callbacks.P  comms.P  db.P  interface.P  main.P  plugins.P  prefs.P  support.P
default/: predict.qth  predict.tle
vocalizer/: build  vocalizer.c
(+41 files in other folders)
